--- a/poster-presentation.html
+++ b/poster-presentation.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Orbitron:wght@600;800&display=swap" rel="stylesheet">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -14,13 +14,14 @@
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
 
+    /* ===== AI BACKGROUND ===== */
     body{
       min-height:100vh;
       font-family:'Poppins',sans-serif;
       color:#fff;
       background:
-        linear-gradient(120deg, rgba(5,8,35,0.9), rgba(0,0,0,0.95)),
-        url("https://images.unsplash.com/photo-1620712943543-bcc4688e7485?auto=format&fit=crop&w=1600&q=80");
+        linear-gradient(rgba(6,10,35,.6), rgba(0,0,0,.75)),
+        url("https://images.unsplash.com/photo-1677442136019-21780ecad995?auto=format&fit=crop&w=1800&q=80");
       background-size:cover;
       background-position:center;
       background-attachment:fixed;
@@ -29,14 +30,14 @@
     /* ===== Header ===== */
     header{
       text-align:center;
-      padding:60px 20px 30px;
+      padding:60px 20px 25px;
     }
 
     header h1{
       font-family:'Orbitron',sans-serif;
-      font-size:2.8rem;
-      color:#00f0ff;
-      text-shadow:0 0 20px #00f0ff;
+      font-size:3rem;
+      color:#00ffff;
+      text-shadow:0 0 20px #00ffff;
     }
 
     header p{
@@ -53,28 +54,36 @@
     }
 
     .card{
-      background:rgba(0,0,0,0.75);
+      background:rgba(0,0,0,0.65);
       padding:40px;
       border-radius:22px;
-      box-shadow:0 0 30px rgba(0,240,255,0.3);
+      box-shadow:0 0 30px rgba(0,255,255,0.25);
     }
 
     h2{
       color:#8ffcff;
-      margin-bottom:15px;
-      text-shadow:0 0 10px #00f0ff;
+      margin-bottom:14px;
     }
 
     p{
       line-height:1.8;
       color:#ddd;
-      margin-bottom:20px;
+      margin-bottom:18px;
     }
 
     /* ===== Rules ===== */
     .rules li{
       margin-bottom:12px;
       line-height:1.6;
+      color:#e0e0e0;
+    }
+
+    /* ===== Payment (SIMPLE, LEFT) ===== */
+    .payment{
+      margin-top:18px;
+      font-size:1rem;
+      color:#ccc;
+      text-align:left;
     }
 
     /* ===== Buttons ===== */
@@ -82,8 +91,8 @@
 
     .btn{
       display:inline-block;
-      margin:25px 10px;
-      padding:14px 32px;
+      margin-top:25px;
+      padding:14px 34px;
       border-radius:30px;
       text-decoration:none;
       color:#fff;
@@ -109,16 +118,10 @@
       background:rgba(0,0,0,0.75);
     }
 
-    .socials a{
+    footer a{
       margin:0 15px;
       font-size:26px;
       color:#00f0ff;
-      transition:0.4s;
-    }
-
-    .socials a:hover{
-      color:#fff;
-      text-shadow:0 0 20px #00f0ff;
     }
 
     footer p{
@@ -129,7 +132,7 @@
 
     @media(max-width:600px){
       header h1{font-size:2.2rem}
-      .card{padding:25px}
+      .card{padding:26px}
     }
   </style>
 </head>
@@ -137,8 +140,8 @@
 <body>
 
 <header>
-  <h1>Poster Presentation</h1>
-  <p>SRK TECHSPARK 2025 | CSM Department</p>
+  <h1>Digital Poster Presentation</h1>
+  <p>SRK TECHSPARK 2025 | Department of CSE – AI & ML</p>
 </header>
 
 <div class="container">
@@ -154,6 +157,7 @@
     <h2>Rules & Guidelines</h2>
     <ol class="rules">
       <li>Participants must register for the event through online.</li>
+      <li>Participation must be single only.</li>
       <li>Each participant must prepare a digital poster related to Artificial Intelligence.</li>
       <li>Posters must be original. Any plagiarism leads to disqualification.</li>
       <li>The poster must follow the specified format and be submitted in PDF format.</li>
@@ -162,15 +166,17 @@
       <li>Each participant will be given 15 minutes to present and explain their poster.</li>
       <li>Posters should be clear, visually appealing, and readable on a digital screen.</li>
       <li>Judgement will be based on content relevance, creativity, clarity, originality, and presentation skills.</li>
-      <li>The decision of the judging panel will be final.</li>
+      <li>The decision of the judging panel will be final, and participants may contact the student coordinator for further assistance.</li>
     </ol>
 
-    <!-- Register button at bottom -->
+    <!-- PAYMENT DETAILS (SIMPLE, LEFT) -->
+    <div class="payment">
+      <strong>Amount per person:</strong> 100 Rupees
+    </div>
+
+    <!-- BACK TO HOME -->
     <div class="center">
-      <a href="register.html" class="btn">
-        <i class="fas fa-pen-to-square"></i> Register Now
-      </a>
-       <a href="index.html" class="btn">
+      <a href="index.html" class="btn">
         <i class="fas fa-house"></i> Back to Home
       </a>
     </div>
