--- a/reverse-coding.html
+++ b/reverse-coding.html
@@ -14,18 +14,21 @@
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
 
-    /* ===== BODY WITH REVERSE CODING BACKGROUND ===== */
-    body{
-      min-height:100vh;
-      font-family:'Poppins',sans-serif;
-      color:#fff;
-      background:
-        linear-gradient(120deg, rgba(4,8,35,0.92), rgba(0,0,0,0.96)),
-        url("https://images.unsplash.com/photo-1515879218367-8466d910aaa4?auto=format&fit=crop&w=1600&q=80");
-      background-size:cover;
-      background-position:center;
-      background-attachment:fixed;
-    }
+    /* ===== CODING / PROGRAMMING BACKGROUND (UPDATED) ===== */
+body{
+  min-height:100vh;
+  font-family:'Poppins',sans-serif;
+  color:#fff;
+  background:
+    linear-gradient(120deg, rgba(4,8,35,0.55), rgba(0,0,0,0.75)),
+    url("https://images.unsplash.com/photo-1504639725590-34d0984388bd?auto=format&fit=crop&w=1800&q=80");
+  background-size:cover;
+  background-position:center;
+  background-attachment:fixed;
+}
+
+
+
 
     /* ===== Header ===== */
     header{
@@ -54,7 +57,7 @@
     }
 
     .card{
-      background:rgba(0,0,0,0.75);
+      background:rgba(0,0,0,0.65);
       padding:40px;
       border-radius:22px;
       box-shadow:0 0 30px rgba(0,240,255,0.3);
@@ -75,6 +78,14 @@
     .rules li{
       margin-bottom:12px;
       line-height:1.6;
+    }
+
+    /* ===== PAYMENT (SIMPLE TEXT) ===== */
+    .payment{
+      margin-top:18px;
+      font-size:1rem;
+      color:#ccc;
+      text-align:left;
     }
 
     /* ===== Buttons ===== */
@@ -101,7 +112,7 @@
       box-shadow:0 0 45px #00f0ff;
     }
 
-    /* ===== Footer (NOT REMOVED) ===== */
+    /* ===== Footer ===== */
     footer{
       margin-top:40px;
       text-align:center;
@@ -109,16 +120,10 @@
       background:rgba(0,0,0,0.75);
     }
 
-    .socials a{
+    footer a{
       margin:0 15px;
       font-size:26px;
       color:#00f0ff;
-      transition:0.4s;
-    }
-
-    .socials a:hover{
-      color:#fff;
-      text-shadow:0 0 20px #00f0ff;
     }
 
     footer p{
@@ -138,7 +143,7 @@
 
 <header>
   <h1>Reverse Coding</h1>
-  <p>SRK TECHSPARK 2025 | CSM Department</p>
+  <p>SRK TECHSPARK 2025 | Department of CSE – AI & ML</p>
 </header>
 
 <div class="container">
@@ -156,13 +161,11 @@
       and programming accuracy under time pressure.
     </p>
 
-
-
     <h2>Rules & Guidelines</h2>
     <ol class="rules">
       <li>Participants can take part individually.</li>
-      <li>Only output, sample test cases, and constraints will be provided — no direct logic.</li>
-      <li>Participants must identify the logic and write a program to match the given output.</li>
+      <li>Only output, sample test cases, and constraints will be provided.</li>
+      <li>Participants must identify the logic and write a program to match the output.</li>
       <li>Allowed languages: C, C++, Java, Python.</li>
       <li>Internet usage and electronic gadgets are strictly prohibited.</li>
       <li>Code must be written only on the provided system.</li>
@@ -171,11 +174,13 @@
       <li>The judges’ decision is final.</li>
     </ol>
 
-    <!-- Register button in middle -->
+    <!-- PAYMENT DETAILS -->
+    <div class="payment">
+      <strong>Amount per person:</strong> 50 Rupees
+    </div>
+
+    <!-- BACK TO HOME -->
     <div class="center">
-      <a href="register.html" class="btn">
-        <i class="fas fa-pen-to-square"></i> Register Now
-      </a>
       <a href="index.html" class="btn">
         <i class="fas fa-house"></i> Back to Home
       </a>
