--- a/snap2prompt.html
+++ b/snap2prompt.html
@@ -14,17 +14,21 @@
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
 
-    body{
-      min-height:100vh;
-      font-family:'Poppins',sans-serif;
-      color:#fff;
-      background:
-        linear-gradient(120deg, rgba(6,10,40,0.92), rgba(0,0,0,0.96)),
-        url("https://images.unsplash.com/photo-1581091870627-3b9c1f7b94b3?auto=format&fit=crop&w=1600&q=80");
-      background-size:cover;
-      background-position:center;
-      background-attachment:fixed;
-    }
+    /* ===== SNAP2PROMPT / AI PROMPT BACKGROUND ===== */
+ body{
+  min-height:100vh;
+  font-family:'Poppins',sans-serif;
+  color:#fff;
+  background:
+    linear-gradient(120deg, rgba(6,10,40,0.6), rgba(0,0,0,0.75)),
+    url("https://images.unsplash.com/photo-1555255707-c07966088b7b?auto=format&fit=crop&w=1800&q=80");
+  background-size:cover;
+  background-position:center;
+  background-attachment:fixed;
+}
+
+
+
 
     header{
       text-align:center;
@@ -51,7 +55,7 @@
     }
 
     .card{
-      background:rgba(0,0,0,0.75);
+      background:rgba(0,0,0,0.65);
       padding:40px;
       border-radius:22px;
       box-shadow:0 0 30px rgba(0,240,255,0.3);
@@ -72,6 +76,14 @@
     ul li, ol li{
       margin-bottom:12px;
       line-height:1.6;
+    }
+
+    /* ===== PAYMENT (SIMPLE TEXT) ===== */
+    .payment{
+      margin-top:18px;
+      font-size:1rem;
+      color:#ccc;
+      text-align:left;
     }
 
     .center{text-align:center}
@@ -104,16 +116,10 @@
       background:rgba(0,0,0,0.75);
     }
 
-    .socials a{
+    footer a{
       margin:0 15px;
       font-size:26px;
       color:#00f0ff;
-      transition:0.4s;
-    }
-
-    .socials a:hover{
-      color:#fff;
-      text-shadow:0 0 20px #00f0ff;
     }
 
     footer p{
@@ -133,7 +139,7 @@
 
 <header>
   <h1>Snap2Prompt</h1>
-  <p>SRK TECHSPARK 2025 | CSM Department</p>
+  <p>SRK TECHSPARK 2025 | Department of CSE – AI & ML</p>
 </header>
 
 <div class="container">
@@ -146,8 +152,6 @@
       This event focuses on prompt engineering skills, clarity of instruction,
       and effective communication with generative AI systems.
     </p>
-
-
 
     <h2>✅ Do’s of Snap2Prompt</h2>
     <ol>
@@ -186,12 +190,14 @@
       Output format: [bullets / JSON / etc.]
     </p>
 
-    <!-- Register button at bottom -->
+    <!-- PAYMENT DETAILS -->
+    <div class="payment">
+      <strong>Amount per person:</strong> 50 Rupees
+    </div>
+
+    <!-- BACK TO HOME -->
     <div class="center">
-      <a href="register.html" class="btn">
-        <i class="fas fa-pen-to-square"></i> Register Now
-      </a>
-       <a href="index.html" class="btn">
+      <a href="index.html" class="btn">
         <i class="fas fa-house"></i> Back to Home
       </a>
     </div>
@@ -208,5 +214,6 @@
     <a href="https://www.linkedin.com/school/srk-institute-of-technology-enikepadu-vijayawada-521108-cc-x4-/" target="_blank"><i class="fab fa-linkedin"></i></a>
   </div>
 </footer>
+
 </body>
 </html>
