--- a/startup-pitch.html
+++ b/startup-pitch.html
@@ -14,14 +14,14 @@
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
 
-    /* ===== BODY WITH STARTUP / INNOVATION BACKGROUND ===== */
+    /* ===== STARTUP / PITCH BACKGROUND (UPDATED) ===== */
     body{
       min-height:100vh;
       font-family:'Poppins',sans-serif;
       color:#fff;
       background:
-        linear-gradient(120deg, rgba(6,10,40,0.92), rgba(0,0,0,0.96)),
-        url("https://images.unsplash.com/photo-1559136656-3db0b6a94d1a?auto=format&fit=crop&w=1600&q=80");
+        linear-gradient(120deg, rgba(6,10,40,0.55), rgba(0,0,0,0.7)),
+        url("https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=1800&q=80");
       background-size:cover;
       background-position:center;
       background-attachment:fixed;
@@ -54,7 +54,7 @@
     }
 
     .card{
-      background:rgba(0,0,0,0.75);
+      background:rgba(0,0,0,0.65);
       padding:40px;
       border-radius:22px;
       box-shadow:0 0 30px rgba(0,240,255,0.3);
@@ -75,6 +75,14 @@
     .rules li{
       margin-bottom:12px;
       line-height:1.6;
+    }
+
+    /* ===== PAYMENT (SIMPLE TEXT) ===== */
+    .payment{
+      margin-top:18px;
+      font-size:1rem;
+      color:#ccc;
+      text-align:left;
     }
 
     /* ===== Buttons ===== */
@@ -101,7 +109,7 @@
       box-shadow:0 0 45px #00f0ff;
     }
 
-    /* ===== Footer (NOT REMOVED) ===== */
+    /* ===== Footer ===== */
     footer{
       margin-top:40px;
       text-align:center;
@@ -109,16 +117,10 @@
       background:rgba(0,0,0,0.75);
     }
 
-    .socials a{
+    footer a{
       margin:0 15px;
       font-size:26px;
       color:#00f0ff;
-      transition:0.4s;
-    }
-
-    .socials a:hover{
-      color:#fff;
-      text-shadow:0 0 20px #00f0ff;
     }
 
     footer p{
@@ -138,7 +140,7 @@
 
 <header>
   <h1>Start-Up Pitch</h1>
-  <p>SRK TECHSPARK 2025 | CSM Department</p>
+  <p>SRK TECHSPARK 2025 | Department of CSE – AI & ML</p>
 </header>
 
 <div class="container">
@@ -156,8 +158,6 @@
       and presentation skills.
     </p>
 
-
-
     <h2>Rules & Guidelines</h2>
     <ol class="rules">
       <li>Only one person can present the startup idea.</li>
@@ -172,12 +172,14 @@
       <li>Participants must maintain discipline and follow event coordinator instructions.</li>
     </ol>
 
-    <!-- Register button at bottom -->
+    <!-- PAYMENT DETAILS -->
+    <div class="payment">
+      <strong>Amount per person:</strong> 50 Rupees
+    </div>
+
+    <!-- BACK TO HOME -->
     <div class="center">
-      <a href="register.html" class="btn">
-        <i class="fas fa-pen-to-square"></i> Register Now
-      </a>
-       <a href="index.html" class="btn">
+      <a href="index.html" class="btn">
         <i class="fas fa-house"></i> Back to Home
       </a>
     </div>
